// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Field DocumentLibrary has a helptext 1`] = `
<div>
  <div
    class="form-group hide"
    data-field-name="textField"
    tabindex="0"
  >
    <div
      class="liferay-ddm-form-field-document-library"
    >
      <div
        class="input-group"
      >
        <div
          class="input-group-item input-group-prepend"
        >
          <input
            aria-errormessage="textField_fieldError"
            aria-invalid="true"
            aria-label="file"
            aria-labelledby="textField_fieldLabel"
            class="form-control field"
            disabled=""
            id="textFieldinputFile"
            type="text"
            value=""
          />
        </div>
        <div
          class="input-group-item input-group-append input-group-item-shrink"
        >
          <button
            aria-labelledby="textField_selectLabel textField_fieldLabel"
            class="select-button btn btn-secondary"
            type="button"
          >
            <span
              class="lfr-btn-label"
            >
              select
            </span>
          </button>
        </div>
      </div>
      <input
        class="form-control"
        id="textField"
        name="textField"
        type="hidden"
        value="{}"
      />
      <span
        class="sr-only"
        id="textField_unselectFileLabel"
      >
         unselect-file 
      </span>
      <span
        class="sr-only"
        id="textField_selectLabel"
      >
         select 
      </span>
      <span
        class="sr-only"
        id="textField_selectedLabel"
      >
         selected 
      </span>
      <span
        class="sr-only"
        id="textField_fileNameLabel"
      >
         file-name 
      </span>
      <span
        class="sr-only"
        id="textField_fileName"
      >
          
      </span>
    </div>
    <span
      class="form-text"
      id="textField_fieldTip"
    >
      Type something
    </span>
  </div>
</div>
`;

exports[`Field DocumentLibrary has a label 1`] = `
<div>
  <div
    class="form-group hide"
    data-field-name="textField"
  >
    <label
      aria-labelledby="textField_fieldLabelHidden"
      class="ddm-label"
      id="textField_fieldLabel"
      tabindex="0"
    >
      label
    </label>
    <div
      class="liferay-ddm-form-field-document-library"
    >
      <div
        class="input-group"
      >
        <div
          class="input-group-item input-group-prepend"
        >
          <input
            aria-errormessage="textField_fieldError"
            aria-invalid="true"
            aria-label="file"
            aria-labelledby="textField_fieldLabel"
            class="form-control field"
            disabled=""
            id="textFieldinputFile"
            type="text"
            value=""
          />
        </div>
        <div
          class="input-group-item input-group-append input-group-item-shrink"
        >
          <button
            aria-labelledby="textField_selectLabel textField_fieldLabel"
            class="select-button btn btn-secondary"
            type="button"
          >
            <span
              class="lfr-btn-label"
            >
              select
            </span>
          </button>
        </div>
      </div>
      <input
        class="form-control"
        id="textField"
        name="textField"
        type="hidden"
        value="{}"
      />
      <span
        class="sr-only"
        id="textField_unselectFileLabel"
      >
         unselect-file 
      </span>
      <span
        class="sr-only"
        id="textField_selectLabel"
      >
         select 
      </span>
      <span
        class="sr-only"
        id="textField_selectedLabel"
      >
         selected 
      </span>
      <span
        class="sr-only"
        id="textField_fileNameLabel"
      >
         file-name 
      </span>
      <span
        class="sr-only"
        id="textField_fileName"
      >
          
      </span>
    </div>
    <span
      class="sr-only"
      id="textField_fieldLabelHidden"
    >
      label
    </span>
  </div>
</div>
`;

exports[`Field DocumentLibrary has a placeholder 1`] = `
<div>
  <div
    class="form-group hide"
    data-field-name="textField"
    tabindex="0"
  >
    <div
      class="liferay-ddm-form-field-document-library"
    >
      <div
        class="input-group"
      >
        <div
          class="input-group-item input-group-prepend"
        >
          <input
            aria-errormessage="textField_fieldError"
            aria-invalid="true"
            aria-label="file"
            aria-labelledby="textField_fieldLabel"
            class="form-control field"
            disabled=""
            id="textFieldinputFile"
            type="text"
            value=""
          />
        </div>
        <div
          class="input-group-item input-group-append input-group-item-shrink"
        >
          <button
            aria-labelledby="textField_selectLabel textField_fieldLabel"
            class="select-button btn btn-secondary"
            type="button"
          >
            <span
              class="lfr-btn-label"
            >
              select
            </span>
          </button>
        </div>
      </div>
      <input
        class="form-control"
        id="textField"
        name="textField"
        placeholder="Placeholder"
        type="hidden"
        value="{}"
      />
      <span
        class="sr-only"
        id="textField_unselectFileLabel"
      >
         unselect-file 
      </span>
      <span
        class="sr-only"
        id="textField_selectLabel"
      >
         select 
      </span>
      <span
        class="sr-only"
        id="textField_selectedLabel"
      >
         selected 
      </span>
      <span
        class="sr-only"
        id="textField_fileNameLabel"
      >
         file-name 
      </span>
      <span
        class="sr-only"
        id="textField_fileName"
      >
          
      </span>
    </div>
  </div>
</div>
`;

exports[`Field DocumentLibrary has a spritemap 1`] = `
<div>
  <div
    class="form-group hide"
    data-field-name="textField"
    tabindex="0"
  >
    <div
      class="liferay-ddm-form-field-document-library"
    >
      <div
        class="input-group"
      >
        <div
          class="input-group-item input-group-prepend"
        >
          <input
            aria-errormessage="textField_fieldError"
            aria-invalid="true"
            aria-label="file"
            aria-labelledby="textField_fieldLabel"
            class="form-control field"
            disabled=""
            id="textFieldinputFile"
            type="text"
            value=""
          />
        </div>
        <div
          class="input-group-item input-group-append input-group-item-shrink"
        >
          <button
            aria-labelledby="textField_selectLabel textField_fieldLabel"
            class="select-button btn btn-secondary"
            type="button"
          >
            <span
              class="lfr-btn-label"
            >
              select
            </span>
          </button>
        </div>
      </div>
      <input
        class="form-control"
        id="textField"
        name="textField"
        type="hidden"
        value="{}"
      />
      <span
        class="sr-only"
        id="textField_unselectFileLabel"
      >
         unselect-file 
      </span>
      <span
        class="sr-only"
        id="textField_selectLabel"
      >
         select 
      </span>
      <span
        class="sr-only"
        id="textField_selectedLabel"
      >
         selected 
      </span>
      <span
        class="sr-only"
        id="textField_fileNameLabel"
      >
         file-name 
      </span>
      <span
        class="sr-only"
        id="textField_fileName"
      >
          
      </span>
    </div>
  </div>
</div>
`;

exports[`Field DocumentLibrary has a value 1`] = `
<div>
  <div
    class="form-group hide"
    data-field-name="textField"
    tabindex="0"
  >
    <div
      class="liferay-ddm-form-field-document-library"
    >
      <div
        class="input-group"
      >
        <div
          class="input-group-item input-group-prepend"
        >
          <input
            aria-errormessage="textField_fieldError"
            aria-invalid="true"
            aria-label="file"
            aria-labelledby="textField_fieldLabel"
            class="form-control field"
            disabled=""
            id="textFieldinputFile"
            type="text"
            value=""
          />
        </div>
        <div
          class="input-group-item input-group-append input-group-item-shrink"
        >
          <button
            aria-labelledby="textField_selectLabel textField_fieldLabel"
            class="select-button btn btn-secondary"
            type="button"
          >
            <span
              class="lfr-btn-label"
            >
              select
            </span>
          </button>
        </div>
      </div>
      <input
        class="form-control"
        id="textField"
        name="textField"
        type="hidden"
        value="{\\"id\\":\\"123\\"}"
      />
      <span
        class="sr-only"
        id="textField_unselectFileLabel"
      >
         unselect-file 
      </span>
      <span
        class="sr-only"
        id="textField_selectLabel"
      >
         select 
      </span>
      <span
        class="sr-only"
        id="textField_selectedLabel"
      >
         selected 
      </span>
      <span
        class="sr-only"
        id="textField_fileNameLabel"
      >
         file-name 
      </span>
      <span
        class="sr-only"
        id="textField_fileName"
      >
          
      </span>
    </div>
  </div>
</div>
`;

exports[`Field DocumentLibrary has an id 1`] = `
<div>
  <div
    class="form-group hide"
    data-field-name="textField"
    tabindex="0"
  >
    <div
      class="liferay-ddm-form-field-document-library"
    >
      <div
        class="input-group"
      >
        <div
          class="input-group-item input-group-prepend"
        >
          <input
            aria-errormessage="textField_fieldError"
            aria-invalid="true"
            aria-label="file"
            aria-labelledby="textField_fieldLabel"
            class="form-control field"
            disabled=""
            id="textFieldinputFile"
            type="text"
            value=""
          />
        </div>
        <div
          class="input-group-item input-group-append input-group-item-shrink"
        >
          <button
            aria-labelledby="textField_selectLabel textField_fieldLabel"
            class="select-button btn btn-secondary"
            type="button"
          >
            <span
              class="lfr-btn-label"
            >
              select
            </span>
          </button>
        </div>
      </div>
      <input
        class="form-control"
        id="ID"
        name="textField"
        type="hidden"
        value="{}"
      />
      <span
        class="sr-only"
        id="textField_unselectFileLabel"
      >
         unselect-file 
      </span>
      <span
        class="sr-only"
        id="textField_selectLabel"
      >
         select 
      </span>
      <span
        class="sr-only"
        id="textField_selectedLabel"
      >
         selected 
      </span>
      <span
        class="sr-only"
        id="textField_fileNameLabel"
      >
         file-name 
      </span>
      <span
        class="sr-only"
        id="textField_fileName"
      >
          
      </span>
    </div>
  </div>
</div>
`;

exports[`Field DocumentLibrary is not readOnly 1`] = `
<div>
  <div
    class="form-group hide"
    data-field-name="textField"
    tabindex="0"
  >
    <div
      class="liferay-ddm-form-field-document-library"
    >
      <div
        class="input-group"
      >
        <div
          class="input-group-item input-group-prepend"
        >
          <input
            aria-errormessage="textField_fieldError"
            aria-invalid="true"
            aria-label="file"
            aria-labelledby="textField_fieldLabel"
            class="form-control field"
            disabled=""
            id="textFieldinputFile"
            type="text"
            value=""
          />
        </div>
        <div
          class="input-group-item input-group-append input-group-item-shrink"
        >
          <button
            aria-labelledby="textField_selectLabel textField_fieldLabel"
            class="select-button btn btn-secondary"
            type="button"
          >
            <span
              class="lfr-btn-label"
            >
              select
            </span>
          </button>
        </div>
      </div>
      <input
        class="form-control"
        id="textField"
        name="textField"
        type="hidden"
        value="{}"
      />
      <span
        class="sr-only"
        id="textField_unselectFileLabel"
      >
         unselect-file 
      </span>
      <span
        class="sr-only"
        id="textField_selectLabel"
      >
         select 
      </span>
      <span
        class="sr-only"
        id="textField_selectedLabel"
      >
         selected 
      </span>
      <span
        class="sr-only"
        id="textField_fileNameLabel"
      >
         file-name 
      </span>
      <span
        class="sr-only"
        id="textField_fileName"
      >
          
      </span>
    </div>
  </div>
</div>
`;

exports[`Field DocumentLibrary is not required 1`] = `
<div>
  <div
    class="form-group hide"
    data-field-name="textField"
    tabindex="0"
  >
    <div
      class="liferay-ddm-form-field-document-library"
    >
      <div
        class="input-group"
      >
        <div
          class="input-group-item input-group-prepend"
        >
          <input
            aria-errormessage="textField_fieldError"
            aria-invalid="true"
            aria-label="file"
            aria-labelledby="textField_fieldLabel"
            aria-required="false"
            class="form-control field"
            disabled=""
            id="textFieldinputFile"
            type="text"
            value=""
          />
        </div>
        <div
          class="input-group-item input-group-append input-group-item-shrink"
        >
          <button
            aria-labelledby="textField_selectLabel textField_fieldLabel"
            class="select-button btn btn-secondary"
            type="button"
          >
            <span
              class="lfr-btn-label"
            >
              select
            </span>
          </button>
        </div>
      </div>
      <input
        class="form-control"
        id="textField"
        name="textField"
        type="hidden"
        value="{}"
      />
      <span
        class="sr-only"
        id="textField_unselectFileLabel"
      >
         unselect-file 
      </span>
      <span
        class="sr-only"
        id="textField_selectLabel"
      >
         select 
      </span>
      <span
        class="sr-only"
        id="textField_selectedLabel"
      >
         selected 
      </span>
      <span
        class="sr-only"
        id="textField_fileNameLabel"
      >
         file-name 
      </span>
      <span
        class="sr-only"
        id="textField_fileName"
      >
          
      </span>
    </div>
  </div>
</div>
`;

exports[`Field DocumentLibrary renders Label if showLabel is true 1`] = `
<div>
  <div
    class="form-group hide"
    data-field-name="textField"
  >
    <label
      aria-labelledby="textField_fieldLabelHidden"
      class="ddm-label"
      id="textField_fieldLabel"
      tabindex="0"
    >
      text
    </label>
    <div
      class="liferay-ddm-form-field-document-library"
    >
      <div
        class="input-group"
      >
        <div
          class="input-group-item input-group-prepend"
        >
          <input
            aria-errormessage="textField_fieldError"
            aria-invalid="true"
            aria-label="file"
            aria-labelledby="textField_fieldLabel"
            class="form-control field"
            disabled=""
            id="textFieldinputFile"
            type="text"
            value=""
          />
        </div>
        <div
          class="input-group-item input-group-append input-group-item-shrink"
        >
          <button
            aria-labelledby="textField_selectLabel textField_fieldLabel"
            class="select-button btn btn-secondary"
            type="button"
          >
            <span
              class="lfr-btn-label"
            >
              select
            </span>
          </button>
        </div>
      </div>
      <input
        class="form-control"
        id="textField"
        name="textField"
        type="hidden"
        value="{}"
      />
      <span
        class="sr-only"
        id="textField_unselectFileLabel"
      >
         unselect-file 
      </span>
      <span
        class="sr-only"
        id="textField_selectLabel"
      >
         select 
      </span>
      <span
        class="sr-only"
        id="textField_selectedLabel"
      >
         selected 
      </span>
      <span
        class="sr-only"
        id="textField_fileNameLabel"
      >
         file-name 
      </span>
      <span
        class="sr-only"
        id="textField_fileName"
      >
          
      </span>
    </div>
    <span
      class="sr-only"
      id="textField_fieldLabelHidden"
    >
      text
    </span>
  </div>
</div>
`;
